<resources>
    <string name="app_name">DocBlock</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="patient_name">Patient Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="dd_mm_yyyy">DD-MM-YYYY</string>
    <string name="loading">Loading</string>
    <string name="mm_dd_yyyy">MM-DD-YYYY</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="your_doctors">Your Doctors</string>
    <string name="search_for_doctors">Search For Doctors</string>
    <string name="your_prescriptions">Your Prescriptions</string>
    <string name="profile">Profile</string>
    <string name="problems_symptoms">Problems/Symptoms</string>
    <string name="how_long_have_you_faced_this_problem_for">How long have you faced this problem for?</string>
    <string name="about_us">About Us</string>
</resources>
